# fast-pixelate

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  fast-pixelate.d.ts  fast-pixelate.js  fast-pixelate.linux-x64-gnu.node  fast-pixelate.mjs  fast-pixelate.win32-x64-msvc.node  package.json
docs/: integration-sharp.md
scripts/: install-strategy.js
src/: lib.rs
