[package]
name = "fast-pixelate"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.0", default-features = false, features = ["async", "napi4"] }
napi-derive = "2.16.0"

# [build]
# rustflags = ["-C", "target-cpu=native"]

[build-dependencies]
napi-build = "2.1.0"

[package.metadata.napi]
binary_name = "fast-pixelate"
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc"
]
